   in early 2019.


Release 1.1.2 - September xx 2018
---------------------------------

* Fix ``write()`` so that it handles array formulas as documented.
  Issue `#418 <https://github.com/jmcnamara/XlsxWriter/issues/418>`_.

* Fix for issue with special characters in worksheet table functions.
  Issue `#442 <https://github.com/jmcnamara/XlsxWriter/issues/442>`_.


Release 1.1.1 - September 22 2018
---------------------------------

* Added comment font name and size options.
  Issue `#201 <https://github.com/jmcnamara/XlsxWriter/issues/201>`_.

* Fix for issue when using text boxes in the same workbook as a chartsheet.
  Issue `#420 <https://github.com/jmcnamara/XlsxWriter/issues/420>`_.


Release 1.1.0 - September 2 2018
--------------------------------

* Added functionality to align chart category axis labels. See the
  ``label_align`` property of the :func:`set_x_axis()` method.

* Added worksheet :func:`hide_row_col_headers()` method to turn off worksheet
  row and column headings.
  Issue `#480 <https://github.com/jmcnamara/XlsxWriter/issues/480>`_.

* Added the :func:`set_tab_ratio()` method to set the ratio between the
  worksheet tabs and the horizontal slider.
  Issue `#481 <https://github.com/jmcnamara/XlsxWriter/issues/481>`_.

* Fixed issue with icon conditional formats when the values were zero.
  Issue `#565 <https://github.com/jmcnamara/XlsxWriter/issues/565>`_.

Release 1.0.9 - August 27 2018
------------------------------

* Fix for issue with formulas quoted as strings in conditional formats,
  introduced in version 1.0.7.
  Issue `#564 <https://github.com/jmcnamara/XlsxWriter/issues/564>`_.


Release 1.0.8 - August 27 2018
------------------------------

* Added named exceptions to XlsxWriter. See :ref:`exceptions`.

* Removed the implicit :func:`close()` in the destructor since it wasn't
  guaranteed to work correctly and raised a confusing exception when any other
  exception was triggered. **Note that this is a backward incompatible